{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 2778,
  "lineage": "8bd64afe-6c26-5e1c-d1fe-b965f6573938",
  "resources": [
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08233217277e821c8",
            "association_id": "eipassoc-0149c81dce5f62a04",
            "domain": "vpc",
            "id": "eipalloc-08233217277e821c8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01868634ab53e8939",
            "private_dns": "ip-10-0-143-30.ec2.internal",
            "private_ip": "10.0.143.30",
            "public_dns": "ec2-52-6-66-240.compute-1.amazonaws.com",
            "public_ip": "52.6.66.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "acaternberg-tf-02-nat-eip",
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-nat-eip",
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:security-group/sg-0bfed55ce19057389",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfed55ce19057389",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "acaternberg-tf-02-alb",
            "name_prefix": "",
            "owner_id": "324005994172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acaternberg-tf-02-alb"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:security-group/sg-03b22ab2e553fbcf8",
            "description": "Allow traffic",
            "egress": [],
            "id": "sg-03b22ab2e553fbcf8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "nfs",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "acaternberg-tf-02 efs",
            "name_prefix": "",
            "owner_id": "324005994172",
            "revoke_rules_on_delete": false,
            "tags": {
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg"
            },
            "tags_all": {
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:security-group/sg-0f535e27056c48f1f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f535e27056c48f1f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bbbc1ad34b061b2c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "acaternberg-tf-02-cluster-20230822064222534600000013",
            "name_prefix": "acaternberg-tf-02-cluster-",
            "owner_id": "324005994172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acaternberg-tf-02-cluster",
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-cluster",
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.base.module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:security-group/sg-0bbbc1ad34b061b2c",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbbc1ad34b061b2c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-02db4960e7eb8a4eb"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0bfed55ce19057389"
                ],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f535e27056c48f1f"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f535e27056c48f1f"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f535e27056c48f1f"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f535e27056c48f1f"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f535e27056c48f1f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f535e27056c48f1f"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "acaternberg-tf-02-node-20230822064222633300000014",
            "name_prefix": "acaternberg-tf-02-node-",
            "owner_id": "324005994172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acaternberg-tf-02-node",
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg",
              "kubernetes.io/cluster/acaternberg-tf-02": "owned"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-node",
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg",
              "kubernetes.io/cluster/acaternberg-tf-02": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.base.module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3470756658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f535e27056c48f1f",
            "security_group_rule_id": "sgr-01a481442ccca81d1",
            "self": false,
            "source_security_group_id": "sg-0bbbc1ad34b061b2c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.base.module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2022775960",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_allow_access_from_alb_sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-4181956943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-0c032f413fea84396",
            "self": false,
            "source_security_group_id": "sg-0bfed55ce19057389",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3282514006",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-003a8ee28c68e75e6",
            "self": false,
            "source_security_group_id": "sg-0f535e27056c48f1f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3552079524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-0bbd1c1994637b269",
            "self": false,
            "source_security_group_id": "sg-0f535e27056c48f1f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-452593970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-0f34d579599ea952c",
            "self": false,
            "source_security_group_id": "sg-0f535e27056c48f1f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-161887507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-02484bacf715cad51",
            "self": false,
            "source_security_group_id": "sg-0f535e27056c48f1f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1829177048",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-089af4add1c97ceb1",
            "self": false,
            "source_security_group_id": "sg-0f535e27056c48f1f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3263649529",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-07e28d27b34661aaa",
            "self": false,
            "source_security_group_id": "sg-0f535e27056c48f1f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1228770032",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-0976278f538e2a7a2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-583345645",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-007005de1a0981346",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2102346069",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-030ac22d03880992b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3641762490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bbbc1ad34b061b2c",
            "security_group_rule_id": "sgr-05703a4fb4fe0ebda",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.base.module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:security-group/sg-075e844e1d315ec26",
            "description": "acaternberg-tf-02 EFS security group",
            "egress": [],
            "id": "sg-075e844e1d315ec26",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20",
                  "10.0.16.0/20"
                ],
                "description": "acaternberg-tf-02 NFS ingress from VPC private subnets",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "acaternberg-tf-02",
            "name_prefix": "",
            "owner_id": "324005994172",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "acaternberg-tf-02-efs",
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-efs",
              "cb-environment": "acaternberg-tf-02",
              "cb-owner": "professional-services",
              "cb-user": "acaternberg"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.efs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/20",
              "10.0.16.0/20"
            ],
            "description": "acaternberg-tf-02 NFS ingress from VPC private subnets",
            "from_port": 2049,
            "id": "sgrule-476428399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075e844e1d315ec26",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.efs.aws_security_group.this",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:network-acl/acl-0fdb3101a6c56d7c8",
            "default_network_acl_id": "acl-0fdb3101a6c56d7c8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fdb3101a6c56d7c8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "324005994172",
            "subnet_ids": [
              "subnet-045574e5709ce52eb",
              "subnet-08727869fa9666890",
              "subnet-0c5ba202da7524667",
              "subnet-0ef90066e803f7a22"
            ],
            "tags": {
              "Name": "acaternberg-tf-02-vpc-default",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-default",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:route-table/rtb-070f3a886e1746702",
            "default_route_table_id": "rtb-070f3a886e1746702",
            "id": "rtb-070f3a886e1746702",
            "owner_id": "324005994172",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "acaternberg-tf-02-vpc-default",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-default",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:security-group/sg-05db55a273f5ca103",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05db55a273f5ca103",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "324005994172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acaternberg-tf-02-vpc-default",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-default",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:internet-gateway/igw-00de61923ca8ad0b8",
            "id": "igw-00de61923ca8ad0b8",
            "owner_id": "324005994172",
            "tags": {
              "Name": "acaternberg-tf-02-vpc",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08233217277e821c8",
            "association_id": "eipassoc-0149c81dce5f62a04",
            "connectivity_type": "public",
            "id": "nat-0b2c64c45f79727c9",
            "network_interface_id": "eni-01868634ab53e8939",
            "private_ip": "10.0.143.30",
            "public_ip": "52.6.66.240",
            "subnet_id": "subnet-08727869fa9666890",
            "tags": {
              "Name": "acaternberg-tf-02-vpc-us-east-1a",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-us-east-1a",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            }
          },
          "dependencies": [
            "module.base.aws_eip.nat_gw_elastic_ip",
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-086d15155c751a0da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b2c64c45f79727c9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-086d15155c751a0da",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_eip.nat_gw_elastic_ip",
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_nat_gateway.this",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00de61923ca8ad0b8",
            "id": "r-rtb-00901a464c268ef6a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00901a464c268ef6a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:route-table/rtb-086d15155c751a0da",
            "id": "rtb-086d15155c751a0da",
            "owner_id": "324005994172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b2c64c45f79727c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acaternberg-tf-02-vpc-private",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-private",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:route-table/rtb-00901a464c268ef6a",
            "id": "rtb-00901a464c268ef6a",
            "owner_id": "324005994172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00de61923ca8ad0b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acaternberg-tf-02-vpc-public",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-public",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf21bd5a83b28d98",
            "route_table_id": "rtb-086d15155c751a0da",
            "subnet_id": "subnet-0c5ba202da7524667"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0382ac02a6ab30cbf",
            "route_table_id": "rtb-086d15155c751a0da",
            "subnet_id": "subnet-045574e5709ce52eb"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e5a218ae7e26323",
            "route_table_id": "rtb-00901a464c268ef6a",
            "subnet_id": "subnet-08727869fa9666890"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cde4036dc34489fb",
            "route_table_id": "rtb-00901a464c268ef6a",
            "subnet_id": "subnet-0ef90066e803f7a22"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:subnet/subnet-0c5ba202da7524667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5ba202da7524667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324005994172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acaternberg-tf-02-vpc-private-us-east-1a",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-private-us-east-1a",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:subnet/subnet-045574e5709ce52eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045574e5709ce52eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324005994172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acaternberg-tf-02-vpc-private-us-east-1b",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-private-us-east-1b",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:subnet/subnet-08727869fa9666890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08727869fa9666890",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324005994172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acaternberg-tf-02-vpc-public-us-east-1a",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-public-us-east-1a",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:subnet/subnet-0ef90066e803f7a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef90066e803f7a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324005994172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acaternberg-tf-02-vpc-public-us-east-1b",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc-public-us-east-1b",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-006a10aaef2df93e7"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324005994172:vpc/vpc-006a10aaef2df93e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fdb3101a6c56d7c8",
            "default_route_table_id": "rtb-070f3a886e1746702",
            "default_security_group_id": "sg-05db55a273f5ca103",
            "dhcp_options_id": "dopt-a606b3c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006a10aaef2df93e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070f3a886e1746702",
            "owner_id": "324005994172",
            "tags": {
              "Name": "acaternberg-tf-02-vpc",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            },
            "tags_all": {
              "Name": "acaternberg-tf-02-vpc",
              "kubernetes.io/cluster/acaternberg-tf-02": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.config",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "eks_namespaces",
      "provider": "module.config.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "sample-apps",
          "schema_version": 0,
          "attributes": {
            "id": "sample-apps",
            "metadata": [
              {
                "annotations": {
                  "name": "sample-apps"
                },
                "generation": 0,
                "name": "sample-apps",
                "resource_version": "917",
                "uid": "257c1a59-f44f-4782-9501-2978eafb41f2"
              }
            ]
          },
          "dependencies": [
            "module.base.aws_security_group.alb",
            "module.base.data.aws_availability_zones.available_azs",
            "module.base.module.cluster.aws_cloudwatch_log_group.this",
            "module.base.module.cluster.aws_eks_cluster.this",
            "module.base.module.cluster.aws_iam_policy.cni_ipv6_policy",
            "module.base.module.cluster.aws_iam_role.this",
            "module.base.module.cluster.aws_iam_role_policy_attachment.this",
            "module.base.module.cluster.aws_security_group.cluster",
            "module.base.module.cluster.aws_security_group.node",
            "module.base.module.cluster.aws_security_group_rule.cluster",
            "module.base.module.cluster.aws_security_group_rule.node",
            "module.base.module.cluster.data.aws_caller_identity.current",
            "module.base.module.cluster.data.aws_iam_policy_document.assume_role_policy",
            "module.base.module.cluster.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.base.module.cluster.data.aws_iam_session_context.current",
            "module.base.module.cluster.data.aws_partition.current",
            "module.base.module.cluster.module.kms.aws_kms_external_key.this",
            "module.base.module.cluster.module.kms.aws_kms_key.this",
            "module.base.module.cluster.module.kms.data.aws_caller_identity.current",
            "module.base.module.cluster.module.kms.data.aws_iam_policy_document.this",
            "module.base.module.cluster.module.kms.data.aws_partition.current",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    }
  ]
}